[package]
name = "adg72x-driver"
version = "0.1.0"
edition = "2024"
description = "Rust driver for ADG72X I²C analog matrix switches"
keywords = ["embedded", "i2c", "hal", "adg728", "adg729"]
categories = ["embedded", "device-drivers"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

[features]
default = []
